[project]
name = "content-env"
version = "0.1.0"
description = "Content Strategy AI Environment"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "openenv==0.1.13"
]

[project.scripts]
server = "app:app"

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"